--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "amigo-secreto-vercel",
-    "version": "1.0.0",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-      "@vercel/kv": "^1.0.1"
-    }
+  "name": "amigo-secreto-vercel-blob",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@vercel/blob": "^0.23.2"
   }
+}
